--- a/Castles/Castles.csproj
+++ b/Castles/Castles.csproj
@@ -27,10 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Content\mapcity.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\mapdemo2.json">
+    <Content Include="Content\maps\testmap.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\settings.json">
