Split shader out into separate class, added color shader

--- a/Castles/Castles.csproj
+++ b/Castles/Castles.csproj
@@ -15,8 +15,10 @@
     <None Remove="Content\mapdemo2.json" />
     <None Remove="Content\mod.json" />
     <None Remove="Content\settings.json" />
-    <None Remove="Content\shader\World.frag.spv" />
-    <None Remove="Content\shader\World.vert.spv" />
+    <None Remove="Content\shader\WorldColor.frag.spv" />
+    <None Remove="Content\shader\WorldColor.vert.spv" />
+    <None Remove="Content\shader\WorldTexture.frag.spv" />
+    <None Remove="Content\shader\WorldTexture.vert.spv" />
     <None Remove="Content\textures\bricks1.png" />
     <None Remove="Content\textures\grass.png" />
     <None Remove="Content\textures\pavement1.png" />
@@ -33,13 +35,19 @@
     <Content Include="Content\settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\shader\World.frag.spv">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\shader\World.vert.spv">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Content\mod.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\shader\WorldColor.frag.spv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\shader\WorldColor.vert.spv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\shader\WorldTexture.frag.spv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\shader\WorldTexture.vert.spv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\textures\bricks1.png">
@@ -74,6 +82,21 @@
     <PackageReference Include="Veldrid.SPIRV" Version="1.0.15" />
     <PackageReference Include="Veldrid.StartupUtilities" Version="4.9.0-beta2" />
     <PackageReference Include="Veldrid.Utilities" Version="4.9.0-beta2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\WorldColor.frag.spv">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\WorldColor.vert.spv">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\WorldTexture.frag.spv">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\WorldTexture.vert.spv">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
