--- a/Castles/Castles.csproj
+++ b/Castles/Castles.csproj
@@ -26,6 +26,7 @@
     <None Remove="Content\textures\placeholder-grey2.png" />
     <None Remove="Content\textures\placeholder-window1.png" />
     <None Remove="Content\textures\road1.png" />
+    <None Remove="Content\textures\test.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -69,6 +70,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\textures\road1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\textures\test.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
